--- a/_units/01.md
+++ b/_units/01.md
@@ -506,6 +506,14 @@ For example, above we learned that a sound's timbre or tone color is partially d
 what combinations of wave forms make up the sound.
 Looking at the images below, we are unable to see anything distinct in the timbres 
 of a short clip of a clarinet versus an oboe in the time domain.
+
+{% include audio-figure src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" description="Clarinet C5 Time Domain" %}
+{% capture fig_waveform %}{{ fignum }}{% endcapture %}
+
+{% include audio-figure src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3" description="Oboe C5 Time Domain" %}
+{% capture fig_waveform %}{{ fignum }}{% endcapture %}
+
+
 <style>
   table, th, td {
 
@@ -524,6 +532,7 @@ of a short clip of a clarinet versus an oboe in the time domain.
   </tr>
 </table>
 </body>
+
 
 If we take both of these very short clips of audio and perform a Fourier transform
 on these waveforms we can move them from the time domain to the frequency 
