--- a/_units/03.md
+++ b/_units/03.md
@@ -576,13 +576,28 @@ Children's song "Frère Jacques"
   </body>
 </html>
 
-The opening measures of Mahler's Symphony No. 1 in D, "Titan".
+The opening measures of Mahler's Symphony No. 1 in D, "Titan", 3rd movement.
+
+<html>
+  <head>
+    <title>Larry</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit3_mahler1.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+
+{% comment %}
 
 <div style="display: block; text-align: center; float: center">
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=yaloAI3CEFg" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
 picture-in-picture" allowfullscreen></iframe>
 </div>
+
+{% endcomment %}
 
 Mahler quoted the melody from the traditional children's song Frère Jacques, but transposed it into the minor mode. An especially eerie and intriguing effect is achieved when the audience recognizes the source of the musical quotation. Thus the perception of the mood of this piece is enhanced by top-down knowledge.
 
@@ -706,6 +721,7 @@ doneear "ba ba". Interestingly, in the fused condition when both looking and lis
 The McGurkEffect was first report in 1976 by McGurk and MacDonald, who propose the following explanation for their finding:
 ... in a ga-lips/ba-voice representation, there is visual information for [a] and [da] and auditory information with features common to [ba] and [da]. By responding to the common information in both modalities, a subject would arrive at the unifying percept /da/. (McGurk & MacDonald, Nature, 1976).
 
+{% comment %}
 # Links And Downloads
 
 Auditorium acoustics concepts: http://hyperphysics.phy-astr.gsu.edu/Hbase/acoustic/auditcon.html#c1
@@ -714,6 +730,7 @@ Clarement Graduate School's Signal Detection Theory Demo
 Auditory Scene Analysis - Bregman's book on MIT Press
 Music Perception journal
 
+{% endcomment %}
 # References
 
 Wikipedia article on soundscape
