--- a/_units/04.md
+++ b/_units/04.md
@@ -420,6 +420,7 @@ plot is greatly reduced than that of the minor second.
 
 # Top-Down Processing and Its Effect on Dissonance
 
+{% comment %}
 ## Interval Hierarchies
 
 Our perception of dissonance is not absolute, that is to say, context matters.
@@ -432,7 +433,7 @@ Kameoka and Kuriyagawa's hierarchy of intervals." %}
 
 {% include img-figure url="/MUTOR/assets/images/kameoka-hierarchy.png"
 description="Interval hierarchy (Kameoka and Kuriyagawa)" width="350px" %}
-
+{% endcomment%}
 
 ## Counterpoint and the Wright-Bregman Hypothesis
 
