--- a/_units/07.md
+++ b/_units/07.md
@@ -91,7 +91,7 @@ mechanical timing
 
 expressive timing
 
-<audio controls src="/MUTOR/assets/audios/unit7_Schumann-Traeumerei.wav" description="unit7_Schumann-Traeumerei.wav"> </audio>
+<audio controls src="/MUTOR/assets/audios/unit7_Schumann-Traeumerei.mp3"> </audio>
 
 
 (source: Penel & Drake, 2000. Rhythm in music performance and perceived structure. In Desain & Windsor, Ed.)
