--- a/_units/08.md
+++ b/_units/08.md
@@ -89,7 +89,17 @@ In the example on the left, as with any reason, the elongated object continues u
 {% include img-figure url="/MUTOR/assets/images/unit8_completion-1.jpg" description="Perceptual completion" %}
 {% include img-figure url="/MUTOR/assets/images/unit8_completion-2.jpg" description="We assume objects to continue when parts of it are hidden behind another object" width="350px" %}
 
-{% include note author="vg" text="We need an auditory example here: Sound-noise band-sound" %}
+<html>
+  <head>
+    <title>unscrambled melody</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit8_perceptualcompletion.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+
 
 # Reification: Subjective Contour
 A similar phenomenon is the _subjective contour_. It is difficult not to see that white triangle, though it does not actually exist. This phenomenon is related to virtual pitch, apparent in low-bandwidth phone calls and strinking pitch of bells. The principle behind subjective contour is referred to as _reification_: "The error of treating something that is not concrete, such as an idea, as a concrete thing." (https://en.wikipedia.org/wiki/Reification_(fallacy))
@@ -157,7 +167,7 @@ The following demonstration (from Deutsch's 2003 CD Musical Illusions and Parado
     </audio>
   </body>
 </html>
-Scrambled melody (source: http://www.philomel.com/)
+scrambled melody
 
 <html>
   <head>
@@ -169,7 +179,7 @@ Scrambled melody (source: http://www.philomel.com/)
     </audio>
   </body>
 </html>
-Original, unscrambled melody (source: http://www.philomel.com/)
+original melody
 
 ## Implication Realization Model
 
