--- a/_units/09.md
+++ b/_units/09.md
@@ -111,14 +111,13 @@ Listening example 2. Froberger's Capriccio played in equal temperament.
 {% include img-figure url="/MUTOR/assets/images/unit9_froberger-capriccioInCmaj.png" description="Froberger Cappriccio C maj" %}
 Figure 2.  Bars 1-12 of Capriccio (FbWV 506) by Johann Jakob Froberger.
 
+{% comment %}
 Download the following patches which will allow you to explore different tuning systems.
 
 [NOTE--THERE WILL BE TWO PATCHES HERE]
+{% endcomment%}
 
-{% include img-figure url="/MUTOR/assets/images/unit9_ratio-to-freq-ss.png" description="" %}
-
-{% include note author="vg" text="There needs to be something more current! " %}
-
+{% include img-figure url="/MUTOR/assets/images/unit9_JI-intervals.png" description="Just Intonation intervals" %}
 
 # Period Tunings
 Theorists have created tunings from either deriving them from the overtone series (just-intonation tuning) or stacking fifths (Pythagorean tuning). Stacking four fifths on C leads to an E which is considerably sharper (81/64; 408 cents) than the E contained in the overtone series (5/4; 386 cents). This discrepancy - mathematically represented by the ratio 81/64 * 4/5 = 81/80 = 21.5 cents - is called the Syntonic comma. Since no tuning can exist mathematically where all thirds and fifths are just, musicians have attempted to make up for this by modifying either thirds and/or fifths — an approach referred to as _temperament_.
