--- a/_units/09.md
+++ b/_units/09.md
@@ -142,7 +142,7 @@ By tempering out fifths, the above-mentioned tuning alternatives become _enharmo
 We have already established that the role of a chord depends on its context. Changing this role facilitates modulation such as when the tonic triad of C major is being reinterpreted as the subdominant of G major - C major serving as a _pivot_ chord between those two key areas.
 Via enharmonic equivalence, equal temperament adds another dimension to modulation as there is no *audible* distinction between the dominant seventh chord (e.g. G-B-D-F; a dominant in the key of C) and the German 6th chord (e.g. G-B-D-E#, a secondary dominant in the key of B). This ambiguity has been exploited by composers in the Classical and Romantic periods to quickly modulate to distant key areas. In the example below, Der Neugierige by Franz Schubert, Schubert exploits the harmonic ambiguity to create a musical analogy to the text by Wilhelm Müller: "One word is ‘yes’, the other is ‘no’; these two words contain for me the whole world".
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46. The first blue area features the second inversion of the secondary dominant seventh chord on G resolving to the subdominant C in the key of G major. The second blue area features the German 6th chord, with the F respelled as E# resolving to the cadential 6-4 chord in B major." %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Schubert-Der-Neugierige.png" description="Franz Schubert: Der Neugierige mm.35-46. The first marked area features the second inversion of the secondary dominant seventh chord on G resolving to the subdominant C in the key of G major. The second marked area features the German 6th chord, with the F respelled as E# resolving to the cadential 6-4 chord in B major." %}
 
 <html>
   <head>
