--- a/_units/01.md
+++ b/_units/01.md
@@ -183,11 +183,8 @@ Let's take a closer look at the details of a time-domain waveform.
 
 ### Frequency
 
-{% include begin-figure description="A sine wave." %} 
-<img src="/MUTOR/assets/images/sin-amp-period.png" alt="A sine wave" 
-style="width: 100%;">
-{% include end-figure %}
-{% assign fig_sin=fignum %}
+{% include img-figure url="/MUTOR/assets/images/unit1_sin-amp-period.jpg" 
+                      description="A sine wave" width="550px" %}
 
 In figure {{ fig_sin }}, we see a special waveform called a *sine wave*.
 A sine wave is special because it is *periodic*, meaning that its shape
@@ -197,6 +194,7 @@ unit of time, say a second, is called its *frequency*.
 A sine wave is a plot of the position
 along the y-axis of a point as it travels counter-clockwise around a 
 unit circle, starting from the point (1, 0).
+
 {% include img-figure url="/MUTOR/assets/images/Sine.gif" 
                       description="The relationship between a sine wave
 					  and the position of a point on the circumference
@@ -222,9 +220,10 @@ phase is usually represented as an angle expressed in degress
 
 A *cosine wave* appears exactly the same as a sine wave, shifted $1/4$
 of a period to the left.
-{% include img-figure url="/MUTOR/assets/images/sin-cos-90phase.png" 
+{% include img-figure url="/MUTOR/assets/images/unit1_sin-cos-90phase.jpg" 
                       description="The relationship between a sine
-					  and a cosine." width="400px" %}
+					  and a cosine." width="550px" %}
+
 Where a sine wave was the position along the y-axis, a cosine wave
 is the position of the same point along the x-axis.
 {% include img-figure url="/MUTOR/assets/images/Cosine.gif" 
