--- a/_units/09.md
+++ b/_units/09.md
@@ -270,8 +270,6 @@ There are four scenarios to be considered:
 
 Note that depending on the stretch factor, chords may still sound strange and wanting. This is explained by the fact that, due to the brain's ability to infer a virtual fundamental (f<sub>0</sub>), partials forming a harmonic spectrum (and - to lesser degree - tones forming a chord) will cause the sensation of a fundamental even though it may be absent from the spectrum. With stretched spectra, this virtual fundamental may not form a harmonic relationship with the members of the chord, adding to its inharmonicity.
 
-{% include note author="vg" text="We may need a JavaSxcript app here" %}
-
 # Harmony and Meter
 In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Consequently, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of a measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
 
@@ -308,11 +306,14 @@ Although Grisey uses a very different system of harmony in Partiels, one can sti
 
 > Two traits characterize the development of sounds:  periodicity and the overtone spectrum. These elements, which are very easy to identify, give the piece continuity and a dynamic that corresponds rather closely to the cyclical form of human respiration: inhalation, exhalation and rest or tension / collapse — relaxation — collection of energy.
 
-In the following demo, the roughness of a sound file can be calculated in realtime.  Download the first section of Partiels here (Partiels_first-section.aiff) to watch and listen to it in realtime.
-{% include note author="vg" text="This needs to be redone" %}
-{% include img-figure url="/MUTOR/assets/images/unit9_roughness-max-screenshot.png" description="Roughness" %}
+In the following demo, the roughness of a sound file can be calculated in realtime.  
 
+{% include img-figure url="/MUTOR/assets/images/unit9_roughness1.png" description="Roughness" %}
+
+{% comment %}
+Download the first section of Partiels here (Partiels_first-section.aiff) to watch and listen to it in realtime.
 [A BETTER PATCH IS COMING SOON]
+{% endcomment %}
 
 ## Harmony, Timbre and Transformation
 
@@ -320,10 +321,11 @@ The opening section of Partiels raises an interesting question:  is there a diff
 
 A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.  In the past, harmonic change and movement to new key areas was largely a discrete event, however, here, by only changing a few notes at a time by placing them in different octaves, Grisey creates a smooth transformation from one sonority to another.  David Wessel has developed a [Max](http://www.cycling74.com) object that facilitates gradual timbral transformation.  Here, a timbre is created using a large bank of sinusoidal oscillators and a gradual transformation to a new timbre is done by changing the frequency of one oscillator at a time.  Download the following patch to experiment with different timbral transformations.
 
-
+{% comment %}
 [NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
+{% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_migrator1.png" description="Roughness" %}
 
 # References
 
