--- a/_units/09.md
+++ b/_units/09.md
@@ -357,6 +357,7 @@ W.A. Sethares. Tuning, timbre, spectrum, scale. Springer Science & Business Medi
 
 D. Wessel.  Timbre space as a musical control structure.  xenakis.ircam.fr/articles/textes/Wessel78a/, 1978.
 
+{% comment %}
 # Links and Downloads
 
 The max patches for the unit can be downloaded here:  max.zip
@@ -366,6 +367,6 @@ Grove Dictionary of Music and Musicians:  http://www.grovemusic.com
 Merriam-Webster Dictionary:  http://www.m-w.com
 
 Wikipedia has many pages dedicated to issues of tuning and temperament:  http://en.wikipedia.org/wiki/Musical_temperament
-
+{% endcomment %}
 
 {% include unit_postamble.md %}
