--- a/_units/02.md
+++ b/_units/02.md
@@ -303,9 +303,14 @@ While various animals are able to hear and have auditory systems, only a few spe
 
 While the act of music making is universal to all cultures in human society, only a few species of animals are known to make music systematically. Nonhuman species that sing include birds, whales, and monkeys.
 
+
+{% include mov-figure src="/MUTOR/assets/videos/unit2_musicinotherspecies.mp4" type="mp4" description="Example maxpatch: spectrum and sonogram to visualise audio spectrum of other species." width="600px" %}
+
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" width="400px" %}
-{% comment %} (image source: Hauser & McDermott, 2003. Nature Neuroscience.) Some singing animals, and spectrograms of the songs they
-make. {% endcomment %}
+(image source: Hauser & McDermott, 2003. Nature Neuroscience.) Some singing animals, and spectrograms of the songs they
+make. 
+{% endcomment %}
 
 The ferret and chinchilla auditory systems are similar to ours in that most of the auditory apparati are similar anatomically and functionally to the human auditory system. This makes them a good animal model to study. Bats are also of interest because of their ability to hear very high frequencies. Bats emit ultrasonic frequencies (sounds beyond our hearing range in frequency) and listen for the reflected sounds in order to determine their own location. The use of echoes to find out one's own position in space is known as echolocation.
 
