--- a/_units/02.md
+++ b/_units/02.md
@@ -304,7 +304,7 @@ While various animals are able to hear and have auditory systems, only a few spe
 While the act of music making is universal to all cultures in human society, only a few species of animals are known to make music systematically. Nonhuman species that sing include birds, whales, and monkeys.
 
 
-{% include mov-figure src="/MUTOR/assets/videos/unit2_musicinotherspecies.mp4" type="mp4" description="Example maxpatch: spectrum and sonogram to visualise audio spectrum of other species." width="600px" %}
+{% include mov-figure src="/MUTOR/assets/videos/unit2_musicinotherspecies.mp4" type="mp4" description="Maxpatch example: spectrum and sonogram to visualise audio spectrum of other species." width="600px" %}
 
 {% comment %}
 {% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" width="400px" %}
