--- a/_units/02.md
+++ b/_units/02.md
@@ -306,6 +306,8 @@ While the act of music making is universal to all cultures in human society, onl
 
 {% include mov-figure src="/MUTOR/assets/videos/unit2_musicinotherspecies.mp4" type="mp4" description="Maxpatch example: spectrum and sonogram to visualise audio spectrum of other species." width="600px" %}
 
+_you can have access to all MUTOR maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
+
 {% comment %}
 {% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" width="400px" %}
 (image source: Hauser & McDermott, 2003. Nature Neuroscience.) Some singing animals, and spectrograms of the songs they
@@ -375,9 +377,10 @@ Famous people suffering from hearing loss (adapted from http://www.hearnet.com/)
 - Trent Reznor
 - Vanilla Fudge
 - William Shatner
-{% comment %} (video source: http://www.hearnet.com) MeasuringHearingDamage {% endcomment %}
-{% include note author="vg" text="Here you want to include one of your videos Psyche? Or you just want a link to the source?" %}
 
+{% comment %} (video source: http://www.hearnet.com) MeasuringHearingDamage 
+{% include note author="vg" text="Here you want to include one of your videos Psyche? Or you just want a link to the source?" %}
+{% endcomment %}
 # How do you know when you have damaged hearing?
 
 Audiologists can administer a pure-tone audiogram to find your threshold and range of hearing. The test involves finding the threshold of hearing for pure tones of different frequencies. The resulting chart is an audiogram, which relates the hearing level (in decibels) to frequency. A 0dB hearinng threshold is equivalent to optimal performance. A louder threshold (higher in dB) signifies increased hearing loss. The severity of hearing loss is summarized in the chart below.
