--- a/_units/06.md
+++ b/_units/06.md
@@ -428,13 +428,16 @@ In order to demonstrate the ability of timbre to override other musical
 structures, he devised what would later become known as the "Wessel Illusion":
 a simple ascending major is played repeatedly by two different timbres
 that alternate notes, as shown in the figure below.
+
 {% include img-figure url="/MUTOR/assets/images/wessel-illusion.png" description="Wessel Illusion: the black noteheads represent one timbre, and the white, another." %}
+
 As the tempo increases, gradually the two timbres "split apart" into 
 their own descending melodies, as shown below.
+
 {% include img-figure url="/MUTOR/assets/images/wessel-illusion-split.png" description="Wessel Illusion: as the tempo increases, the percept switches from a single repeated ascending line, to two descinding lines." %}
-{% include note author="jm" text="interactive example" %}
 
+{% include mov-figure src="/MUTOR/assets/videos/unit6_wessel illusion.mp4" type="mp4" description="Maxpatch example: David Wessel's Illusion." width="600px" %}
 
-
+_you can have access to all MUTOR maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
 
 {% include unit_postamble.md %}
