--- a/_units/06.md
+++ b/_units/06.md
@@ -438,6 +438,6 @@ their own descending melodies, as shown below.
 
 {% include mov-figure src="/MUTOR/assets/videos/unit6_wessel illusion.mp4" type="mp4" description="Maxpatch example: David Wessel's Illusion." width="600px" %}
 
-_you can have access to all MUTOR maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
+_you can have access to all MUTOR interacive maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
 
 {% include unit_postamble.md %}
