--- a/_units/02.md
+++ b/_units/02.md
@@ -304,9 +304,9 @@ While various animals are able to hear and have auditory systems, only a few spe
 While the act of music making is universal to all cultures in human society, only a few species of animals are known to make music systematically. Nonhuman species that sing include birds, whales, and monkeys.
 
 
-{% include mov-figure src="/MUTOR/assets/videos/unit2_musicinotherspecies.mp4" type="mp4" description="Maxpatch example: spectrum and sonogram to visualise audio spectrum of other species." width="600px" %}
+{% include mov-figure src="/MUTOR/assets/videos/unit2_musicinotherspecies.mp4" type="mp4" description="Maxpatch example: spectrum and sonogram." width="600px" %}
 
-_you can have access to all MUTOR maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
+_you can have access to all MUTOR interactive maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
 
 {% comment %}
 {% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" width="400px" %}
