--- a/_units/08.md
+++ b/_units/08.md
@@ -245,7 +245,9 @@ Adapted to music, HMMs can be used to generate melodies. Each interval can be a 
 
 The following interactive example is a matrix of transitions between intervals in a melody. The melody transitions matrix below generates a melody from a Hidden Markov Model:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_markovchain.png" description="Screenshot of a Max patch implementing a melody transition matrix" %}
+{% include mov-figure src="/MUTOR/assets/videos/unit8_markovchains.mp4" type="mp4" description="Maxpatch example: spectrum and sonogram." width="600px" %}
+
+_you can have access to all MUTOR interactive maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
 
 ## Texture Space
 
