--- a/_units/09.md
+++ b/_units/09.md
@@ -117,7 +117,9 @@ Download the following patches which will allow you to explore different tuning 
 [NOTE--THERE WILL BE TWO PATCHES HERE]
 {% endcomment%}
 
-{% include img-figure url="/MUTOR/assets/images/unit9_JI-intervals.png" description="Just Intonation intervals" %}
+{% include mov-figure src="/MUTOR/assets/videos/unit9_justintonation.mp4" type="mp4" description="Maxpatch example: Just Intonation Intervals." width="600px" %}
+
+_you can have access to all MUTOR interactive maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
 
 # Period Tunings
 Theorists have created tunings from either deriving them from the overtone series (just-intonation tuning) or stacking fifths (Pythagorean tuning). Stacking four fifths on C leads to an E which is considerably sharper (81/64; 408 cents) than the E contained in the overtone series (5/4; 386 cents). This discrepancy - mathematically represented by the ratio 81/64 * 4/5 = 81/80 = 21.5 cents - is called the Syntonic comma. Since no tuning can exist mathematically where all thirds and fifths are just, musicians have attempted to make up for this by modifying either thirds and/or fifths — an approach referred to as _temperament_.
@@ -182,10 +184,10 @@ Subdivisions of the whole tone into four (quartertone tuning or 24-tone equal te
 ### Other Divisions of the Octave
 In theory, the octave can be devided into an infinite number of steps. So what makes one scale more interesting than another? Obviously this depends on the style of the music and whether or not the music is meant to be performed on real instruments. One important aspect is how well the scale is capable of representing just intervals, e.g. small integer frequency ratios such as 3/2 or 5/4. Theorists seeking to find temperaments with even better fifths than 12TET have considered 41TET and 53TET. The latter is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31 octaves. It was already known to Chinese scholars in antiquity.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_fifthstacker.png" description="Calculation of equidistant tunings based on stacking fifths" %}
-Figure 4. Calculation of the 53-tone (and other) equidistant tunings in Max
+{% include mov-figure src="/MUTOR/assets/videos/unit9_calculationofequidistanttunings.mp4" type="mp4" description="Maxpatch example: Calculation of equidistant tunings based on stacking fifths" width="600px" %}
 
-{% include note author="vg" text="create online version" %}
+_you can have access to all MUTOR interactive maxpatches when you download the [MUTOR github repository](https://github.com/MUTOR-2/MUTOR) inside the maxpatches folder._
+
 
 In turn, 19TET (approximation of 1/3 comma meantone tuning) and 31TET (approximation of 1/4 comma meantone tuning) feature excellent major thirds and have even been considered by 20th century scholars such as Joseph Yasser and Adriaan Fokker as contenders for the replacement of 12TET.
 
