reorganized audio lib includes under p/ dir

--- a/_units/06.md
+++ b/_units/06.md
@@ -332,21 +332,21 @@ etc.
 
 {% include note author="jm" text="replace image with a live sonogram when ready" %}
 {% include img-figure url="/MUTOR/assets/images/sather-0.7-sonogram.png" description="A sonogram of a bell from the Sather Tower Campanile on the UC Berkeley campus. Note the noise burst that occurs when the bell is struck." %}
-{% include begin-audio-example %}
-{% include audio-buffer name="mybuf" src="/MUTOR/assets/audios/sather-0.7.bell.mn.mp3" %}
-{% include audio-player name="player" buffer="mybuf" %}
+{% include p/begin %}
+{% include p/buffer name="mybuf" src="/MUTOR/assets/audios/sather-0.7.bell.mn.mp3" %}
+{% include p/player name="player" buffer="mybuf" %}
 <table><tr><td>
-{% include begin-overlay width="600px" height="200px" %}
-{% include audio-waveform name="waveform" buffer="mybuf" %}
-{% include audio-playhead name="playhead" player="player" %}
-{% include end-overlay %}
+{% include p/begin-overlay width="600px" height="200px" %}
+{% include p/waveform name="waveform" buffer="mybuf" %}
+{% include p/playhead name="playhead" player="player" %}
+{% include p/end-overlay %}
 </td><td>
-{% include audio-meter name="meter" %}
+{% include p/meter name="meter" %}
 </td></tr><tr><td>
-{% include audio-connection outlet="player" inlet="meter" %}
-{% include audio-transport name="transport" %}
+{% include p/connect outlet="player" inlet="meter" %}
+{% include p/transport name="transport" %}
 </td></tr></table>
-{% include end-audio-example %}
+{% include p/end %}
 
 In the example above, the transients can be heard and seen as a momentary 
 burst of inharmonicity in the opening milliseconds of the sound.
