--- a/_units/01.md
+++ b/_units/01.md
@@ -76,21 +76,21 @@ sound waves, and the ways we represent them.
 
 {% comment %}
 {% include begin-figure description="A waveform" %}
-{% include begin-audio-example %}
-{% include audio-buffer name="mybuf" src="/MUTOR/assets/audios/trombone.mp3" %}
-{% include audio-player name="player" buffer="mybuf" %}
+{% include p/begin %}
+{% include p/buffer name="mybuf" src="/MUTOR/assets/audios/trombone.mp3" %}
+{% include p/player name="player" buffer="mybuf" %}
 <table><tr><td>
-{% include begin-overlay width="600px" height="200px" %}
-{% include audio-waveform name="waveform" buffer="mybuf" %}
-{% include audio-playhead name="playhead" player="player" %}
-{% include end-overlay %}
+{% include p/begin-overlay width="600px" height="200px" %}
+{% include p/waveform name="waveform" buffer="mybuf" %}
+{% include p/playhead name="playhead" player="player" %}
+{% include p/end-overlay %}
 </td><td>
-{% include audio-meter name="meter" %}
+{% include p/meter name="meter" %}
 </td></tr><tr><td>
-{% include audio-connection outlet="player" inlet="meter" %}
-{% include audio-transport name="transport" %}
+{% include p/connect outlet="player" inlet="meter" %}
+{% include p/transport name="transport" %}
 </td></tr></table>
-{% include end-audio-example %}
+{% include p/end %}
 {% include end-figure %}
 {% endcomment %}
 {% include audio-figure src="/MUTOR/assets/audios/unit1_welcome.wav" description="A waveform" %}
@@ -464,7 +464,7 @@ Another representation of the spectrum over time is called a *sonogram*:
 description="A spectrum (left) and a sonogram (right)." %}
 {% endcomment %}
 {% include begin-figure description="A waveform (top), a spectrum (bottom left) and a sonogram (bottom right)." %}
-{% include begin-audio-example %}
+{% include p/begin %}
 
 {% assign buffername = audio_ex_pfx | append: "buffer" %}
 {% assign playername = audio_ex_pfx | append: "player" %}
@@ -475,25 +475,25 @@ description="A spectrum (left) and a sonogram (right)." %}
 {% assign spectroscopename = audio_ex_pfx | append: "spectroscope" %}
 {% assign sonogramname = audio_ex_pfx | append: "sonogram" %}
 
-{% include audio-buffer name=buffername src="/MUTOR/assets/audios/trombone.mp3" %}
-{% include audio-player name=playername buffer= buffername %}
+{% include p/buffer name=buffername src="/MUTOR/assets/audios/trombone.mp3" %}
+{% include p/player name=playername buffer= buffername %}
 <table><tr><td>
-{% include begin-overlay width="600px" height="200px" %}
-{% include audio-waveform name=waveformname buffer=buffername %}
-{% include audio-playhead name=playheadname player=playername %}
-{% include end-overlay %}
+{% include p/begin-overlay width="600px" height="200px" %}
+{% include p/waveform name=waveformname buffer=buffername %}
+{% include p/playhead name=playheadname player=playername %}
+{% include p/end-overlay %}
 </td><td>
-{% include audio-meter name=metername %}
+{% include p/meter name=metername %}
 </td></tr><tr><td>
-{% include audio-spectroscope name=spectroscopename width="295px" gain="7500" %}
-{% include audio-sonogram name=sonogramname width="295px" %}
-{% include audio-connection outlet=playername inlet=spectroscopename %}
-{% include audio-connection outlet=playername inlet=sonogramname %}
+{% include p/spectroscope name=spectroscopename width="295px" gain="7500" %}
+{% include p/sonogram name=sonogramname width="295px" %}
+{% include p/connect outlet=playername inlet=spectroscopename %}
+{% include p/connect outlet=playername inlet=sonogramname %}
 </td></tr><tr><td>
-{% include audio-connection outlet=playername inlet=metername %}
-{% include audio-transport name=transportname %}
+{% include p/connect outlet=playername inlet=metername %}
+{% include p/transport name=transportname %}
 </td></tr></table>
-{% include end-audio-example %}
+{% include p/end %}
 {% include end-figure %}
 Here, we can see a history of the spectrum over time, with the height
 representing frequency, the brightness *magnitude* (related to amplitude),
