--- a/_units/01.md
+++ b/_units/01.md
@@ -466,14 +466,14 @@ description="A spectrum (left) and a sonogram (right)." %}
 {% include begin-figure description="A waveform (top), a spectrum (bottom left) and a sonogram (bottom right)." %}
 {% include p/begin %}
 
-{% assign buffername = audio_ex_pfx | append: "buffer" %}
-{% assign playername = audio_ex_pfx | append: "player" %}
-{% assign waveformname = audio_ex_pfx | append: "waveform" %}
-{% assign playheadname = audio_ex_pfx | append: "playhead" %}
-{% assign metername = audio_ex_pfx | append: "meter" %}
-{% assign transportname = audio_ex_pfx | append: "transport" %}
-{% assign spectroscopename = audio_ex_pfx | append: "spectroscope" %}
-{% assign sonogramname = audio_ex_pfx | append: "sonogram" %}
+{% assign buffername = mutor_patch_pfx | append: "buffer" %}
+{% assign playername = mutor_patch_pfx | append: "player" %}
+{% assign waveformname = mutor_patch_pfx | append: "waveform" %}
+{% assign playheadname = mutor_patch_pfx | append: "playhead" %}
+{% assign metername = mutor_patch_pfx | append: "meter" %}
+{% assign transportname = mutor_patch_pfx | append: "transport" %}
+{% assign spectroscopename = mutor_patch_pfx | append: "spectroscope" %}
+{% assign sonogramname = mutor_patch_pfx | append: "sonogram" %}
 
 {% include p/buffer name=buffername src="/MUTOR/assets/audios/trombone.mp3" %}
 {% include p/player name=playername buffer= buffername %}
@@ -485,7 +485,7 @@ description="A spectrum (left) and a sonogram (right)." %}
 </td><td>
 {% include p/meter name=metername %}
 </td></tr><tr><td>
-{% include p/spectroscope name=spectroscopename width="295px" gain="7500" %}
+{% include p/spectroscope name=spectroscopename width="295px" gain="6000" %}
 {% include p/sonogram name=sonogramname width="295px" %}
 {% include p/connect outlet=playername inlet=spectroscopename %}
 {% include p/connect outlet=playername inlet=sonogramname %}
