more refactoring of the audio examples

--- a/_units/01.md
+++ b/_units/01.md
@@ -93,7 +93,9 @@ sound waves, and the ways we represent them.
 {% include p/end %}
 {% include end-figure %}
 {% endcomment %}
-{% include audio-figure src="/MUTOR/assets/audios/unit1_welcome.wav" description="A waveform" %}
+{% include begin-figure description="A waveform" %}
+{% include p/xwaveform src="/MUTOR/assets/audios/unit1_welcome.wav" %}
+{% include end-figure %}
 {% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
 The image in figure {{ fig_waveform }} may be a familiar
@@ -506,10 +508,14 @@ what combinations of wave forms make up the sound.
 Looking at the images below, we are unable to see anything distinct in the timbres 
 of a short clip of a clarinet versus an oboe in the time domain.
 
-{% include audio-figure src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" description="Clarinet C5 Time Domain" %}
+{% include begin-figure description="Clarinet C5 Time Domain" %}
+{% include p/xwaveform src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" %}
+{% include end-figure %}
 {% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
-{% include audio-figure src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3" description="Oboe C5 Time Domain" %}
+{% include begin-figure description="Oboe C5 Time Domain" %}
+{% include p/xwaveform src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3" %}
+{% include end-figure %}
 {% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
 
