--- a/_units/01.md
+++ b/_units/01.md
@@ -466,36 +466,7 @@ Another representation of the spectrum over time is called a *sonogram*:
 description="A spectrum (left) and a sonogram (right)." %}
 {% endcomment %}
 {% include begin-figure description="A waveform (top), a spectrum (bottom left) and a sonogram (bottom right)." %}
-{% include p/begin %}
-
-{% assign buffername = mutor_patch_pfx | append: "buffer" %}
-{% assign playername = mutor_patch_pfx | append: "player" %}
-{% assign waveformname = mutor_patch_pfx | append: "waveform" %}
-{% assign playheadname = mutor_patch_pfx | append: "playhead" %}
-{% assign metername = mutor_patch_pfx | append: "meter" %}
-{% assign transportname = mutor_patch_pfx | append: "transport" %}
-{% assign spectroscopename = mutor_patch_pfx | append: "spectroscope" %}
-{% assign sonogramname = mutor_patch_pfx | append: "sonogram" %}
-
-{% include p/buffer name=buffername src="/MUTOR/assets/audios/trombone.mp3" %}
-{% include p/player name=playername buffer= buffername %}
-<table><tr><td>
-{% include p/begin-overlay width="600px" height="200px" %}
-{% include p/waveform name=waveformname buffer=buffername %}
-{% include p/playhead name=playheadname player=playername %}
-{% include p/end-overlay %}
-</td><td>
-{% include p/meter name=metername %}
-</td></tr><tr><td>
-{% include p/spectroscope name=spectroscopename width="295px" gain="6000" %}
-{% include p/sonogram name=sonogramname width="295px" %}
-{% include p/connect outlet=playername inlet=spectroscopename %}
-{% include p/connect outlet=playername inlet=sonogramname %}
-</td></tr><tr><td>
-{% include p/connect outlet=playername inlet=metername %}
-{% include p/transport name=transportname %}
-</td></tr></table>
-{% include p/end %}
+{% include p/xwaveform-spectroscope-sonogram src="/MUTOR/assets/audios/trombone.mp3" gain="6000." %}
 {% include end-figure %}
 Here, we can see a history of the spectrum over time, with the height
 representing frequency, the brightness *magnitude* (related to amplitude),
