--- a/_units/01.md
+++ b/_units/01.md
@@ -449,9 +449,8 @@ that you fed into the Fourier transform.
 You could do this with something as short as a recording of a pluck of a single note 
 on a banjo or an entire symphony.
 
-{% include begin-figure description="The spectrum of an audio signal." %}
-{% include note author="jm" text="interactive spectrum example with 
-the ability to blend components etc" %}
+{% include begin-figure description="Spectrum of a Trombone playing" %}
+{% include p/xspectroscope src="/MUTOR/assets/audios/trombone.mp3" gain="6000." %}
 {% include end-figure %}
 
 Looking at a sound's spectrum, we now have a more clear view of the frequency composition of a signal.
@@ -461,13 +460,11 @@ is also a tacit statement that it is a significantly less important feature
 than the frequency information.
 
 Another representation of the spectrum over time is called a *sonogram*:
-{% comment %}
-{% include img-figure url="/MUTOR/assets/images/MUTOR_SpectrumAndSonogram.png" 
-description="A spectrum (left) and a sonogram (right)." %}
-{% endcomment %}
-{% include begin-figure description="A waveform (top), a spectrum (bottom left) and a sonogram (bottom right)." %}
-{% include p/xwaveform-spectroscope-sonogram src="/MUTOR/assets/audios/trombone.mp3" gain="6000." %}
+
+{% include begin-figure description="Sonogram of a Trombone playing" %}
+{% include p/xsonogram src="/MUTOR/assets/audios/trombone.mp3" %}
 {% include end-figure %}
+
 Here, we can see a history of the spectrum over time, with the height
 representing frequency, the brightness *magnitude* (related to amplitude),
 and time along the x-axis.
@@ -479,17 +476,15 @@ what combinations of wave forms make up the sound.
 Looking at the images below, we are unable to see anything distinct in the timbres 
 of a short clip of a clarinet versus an oboe in the time domain.
 
-{% include begin-figure description="Clarinet C5 Time Domain" %}
-{% include p/xwaveform src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" %}
+{% include begin-figure description="Clarinet C5 Time Domain vs Frequeny Domain" %}
+{% include p/xwaveform-spectroscope src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" gain="6000." %}
 {% include end-figure %}
-{% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
-{% include begin-figure description="Oboe C5 Time Domain" %}
-{% include p/xwaveform src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3" %}
+{% include begin-figure description="Oboe C5 Time Domain vs Frequeny Domain" %}
+{% include p/xwaveform-spectroscope src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3" gain="6000." %}
 {% include end-figure %}
-{% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
-
+{% comment %}
 <style>
   table, th, td {
 
@@ -510,6 +505,7 @@ of a short clip of a clarinet versus an oboe in the time domain.
 </body>
 
 
+
 If we take both of these very short clips of audio and perform a Fourier transform
 on these waveforms we can move them from the time domain to the frequency 
 domain and suspend them in time.
@@ -528,6 +524,9 @@ domain and suspend them in time.
   </tr>
 </table>
 </body>
+
+{% endcomment %}
+
 
 Looking at these exact same clips of sound, but now in the frequency domain, we 
 can see that the two sounds are very different.
