--- a/_units/03.md
+++ b/_units/03.md
@@ -418,18 +418,24 @@ The signal with multiple harmonics sounds louder than the pure tone because our 
 
 The spectral integration that our ear performs is an important feature of the way in which we perceive many orchestral instruments, especially the brass instruments. Figure 3 is a sonogram of a tuba playing an A3 starting moderately loud (mf), getting quieter, and then getting louder. Notice that the fundamental (the lowest line in the sonogram) doesn't change amplitude much, but rather, the change in volume comes from the addition of upper partials.
 
+{% include begin-figure description="TA tuba playing A3 going from moderately loud to soft to loud" %}
+{% include p/xsonogram src="/MUTOR/assets/audios/unit3_tuba-cresc.wav" %}
+{% include end-figure %}
+
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/unit3_tuba-cresc.png" description="A tuba playing A3 going from moderately loud to soft to loud." %}
 <html>
   <head>
     <title>A tuba playing A3 going from moderately loud to soft to loud</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit3_tuba-cresc.aif">
+    <audio controls src="/MUTOR/assets/audios/unit3_tuba-cresc.wav">
       Your browser does not support the audio element.
     </audio>
   </body>
 </html>
 Audio example 1: The tuba from figure 3.10.
+{% endcomment %}
 
 ## Loudness And Time
 
@@ -537,6 +543,19 @@ where RT_60 is the reverb time, V is the volume of the enclosure, A is the sum o
 
 Sound examples 1-3, and figures 3.20 - 3.22 are impulse responses of three different halls and their sonograms. Notice that the reverb of each hall decays in a different way and that different frequency regions decay quicker than others but that in general the low frequencies remain active longer than the high frequencies—this is a typical property of the reverb of most enclosed spaces. Also, note that the early reflections can be heard clearly in the second and third examples.
 
+{% include begin-figure description="The reverb decays of three different rooms: response 1." %}
+{% include p/xsonogram src="/MUTOR/assets/audios/unit3_impulse1.wav" %}
+{% include end-figure %}
+
+{% include begin-figure description="The reverb decays of three different rooms: response 2." %}
+{% include p/xsonogram src="/MUTOR/assets/audios/unit3_impulse2.wav" %}
+{% include end-figure %}
+
+{% include begin-figure description="The reverb decays of three different rooms: response 3." %}
+{% include p/xsonogram src="/MUTOR/assets/audios/unit3_impulse3.wav" %}
+{% include end-figure %}
+
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/unit3_impulse-specgram-decayenv.png" description="The reverb decays of three different rooms: response 1." width="300px" %}
 
 <audio controls src="/MUTOR/assets/audios/unit3_impulse1.wav">
@@ -553,6 +572,7 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio>
 
+{% endcomment %}
 
 Sound samples taken from:
 http://www.cksde.com/p_6_250.htm
