--- a/_units/05.md
+++ b/_units/05.md
@@ -212,7 +212,9 @@ Heinrich Schenker has developed an analysis method (Schenkerian analysis) demons
 
 Just as Shepard's 5-dimensional model, the Neo-Riemannian _tonnetz_ is capable of representing fifth and third relationships. The tonnetz is frequently used in music theory to represent harmonic progression.
 
-{% include img-figure url="/MUTOR/assets/images/unit5_tonnetz-torus.jpg" description="Neo-Riemannian tonnetz" %}
+{% include img-figure url="/MUTOR/assets/images/unit5_tonnetz-torus.gif" description="Neo-Riemannian tonnetz" %}
+
+By Davidwbulger - Own work, Public Domain, https://commons.wikimedia.org/w/index.php?curid=11490121
 
 
 # Tonality and Probe Tone Method
@@ -273,8 +275,10 @@ With the help of Krumhansl's model, when playing (tonal) music, it is possible t
 - Slaney, M., & Lyon, R. F. (1993). On the importance of time-a temporal representation of sound. Visual representations of speech signals, 95116.
 - Warren, J. D., Uppenkamp, S., Patterson, R. D., & Griffiths, T. D. (2003). Separating pitch chroma and pitch height in the human brain. Proceedings of the National Academy of Sciences, 100(17), 10038-10042.
 
+{% comment %}
 # Links and Downloads
 
 -
+{% endcomment %}
 
 {% include unit_postamble.md %}
