--- a/_units/06.md
+++ b/_units/06.md
@@ -352,9 +352,11 @@ In the example above, the transients can be heard and seen as a momentary
 burst of inharmonicity in the opening milliseconds of the sound.
 {% include note author="jm" text="could find a more obvious example" %}
 
+{% comment %}
 # Synthesis of Timbre
 
 {% include note author="jm" text="this is probably far too big a topic to go into here..." %}
+{% endcomment %}
 
 # Timbre and Orchestration
 
