--- a/_units/10.md
+++ b/_units/10.md
@@ -334,12 +334,13 @@ Musical expectancies have been observed using many convergent methods. These met
 * S Arom. 1991. African polyphony and polyrhythm: musical structure and methodology. Cambridge University Press 
 * C.L. Krumhansl, (1990). Cognitive Foundations of Musical Pitch. Oxford Univ. Press.
 
+{% comment %}
 # Links and Downloads
 
 * Download and run the probe tone experiment here.
 * Download and run an experiment in the betting paradigm here.
 * Read a review on David Huron's book on musical anticipation and expectation: [Sweet Anticipation] (https://www.researchgate.net/publication/318802898_Review_David_Huron_Sweet_Anticipation_Music_and_the_Psychology_of_Expectation)
-
+{% endcomment %}
 
 
 {% include unit_postamble.md %}
