--- a/_units/06.md
+++ b/_units/06.md
@@ -69,6 +69,7 @@ and the spectral representation of a sound gives us information about how that
 energy is distributed.
 
 Typically, we look at a spectrum on a 2D plot, like so:
+
 {% include img-figure url="/MUTOR/assets/images/time-domain.png" description="Time-domain representation of a signal." %}
 {% include img-figure url="/MUTOR/assets/images/frequency-domain.png" description="Frequency-domain representation of a signal." %}
 In the plot on top, we have a familiar sine wave; the vertical axis
@@ -315,7 +316,10 @@ distribution changes) during the attack of a clarinet playing A4
 *mezzo-forte*. Generally, we can say that the timbre gets *brighter* as 
 the tone gets louder, and this can be seen in the figure as more and more
 energy becomes present in the upper part of the spectrum.
+
+{% comment %}
 {% include note author="jm" text="this should be an audio example" %}
+{% endcomment %}
 
 ## Transients
 
@@ -330,7 +334,15 @@ the initial burst that gets the lips buzzing in the mouthpiece of a brass
 instrument, the initial slipping of the string against the hair of a bow,
 etc.
 
+{% comment %}
 {% include note author="jm" text="replace image with a live sonogram when ready" %}
+{% endcomment %}
+
+{% include begin-figure description="A sonogram of a bell from the Sather Tower Campanile on the UC Berkeley campus. Note the noise burst that occurs when the bell is struck." %}
+{% include p/xwaveform-sonogram src="/MUTOR/assets/audios/sather-0.7.bell.mn.mp3" %}
+{% include end-figure %}
+
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/sather-0.7-sonogram.png" description="A sonogram of a bell from the Sather Tower Campanile on the UC Berkeley campus. Note the noise burst that occurs when the bell is struck." %}
 {% include p/begin %}
 {% include p/buffer name="mybuf" src="/MUTOR/assets/audios/sather-0.7.bell.mn.mp3" %}
@@ -347,6 +359,8 @@ etc.
 {% include p/transport name="transport" %}
 </td></tr></table>
 {% include p/end %}
+
+{% endcomment %}
 
 In the example above, the transients can be heard and seen as a momentary 
 burst of inharmonicity in the opening milliseconds of the sound.
